updated website --version 3.5.6

--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@
         <p>&copy; <span id="year"></span> Nikhil Adyapak. Engineered with <i class="fas fa-code" style="color: var(--accent);"></i></p>
         
         <p style="margin-top: 10px; opacity: 0.8;">
-            <a href="https://hits.se">
-                <img src="https://hits.se/badge/w/hits.svg?url=https://nikhiladyapak.github.io/&color=2f3136&label=Profile+Views" alt="Hits">
+            <a href="https://hits.sh/nikhiladyapak.github.io/">
+                <img alt="Hits" src="https://hits.sh/nikhiladyapak.github.io.svg?style=flat-square&label=Profile%20Views&color=58a6ff"/>
             </a>
         </p>
     </footer>
