updated website --version 3.6.0

--- a/index.html
+++ b/index.html
@@ -312,6 +312,25 @@
         <div class="container">
             <h2 class="section-title center">Featured Projects</h2>
             <div class="projects-grid">
+
+                <div class="project-card">
+                    <div class="card-head">
+                        <i class="fas fa-shield-alt icon"></i>
+                        <div class="links">
+                            <a href="https://devpost.com/software/sentinel-edge-ai-6f4zkc?ref_content=user-portfolio&ref_feature=in_progress" target="_blank" rel="noopener noreferrer">Devpost</a>
+                            <a href="https://www.youtube.com/watch?v=o6RKIUL6Ju0" target="_blank" rel="noopener noreferrer">Demo</a>
+                            <a href="https://github.com/NikhilAdyapak/SentinelAI" target="_blank" rel="noopener noreferrer">Repo</a>
+                        </div>
+                    </div>
+                    <h3>Sentinel Edge AI</h3>
+                    <p> <strong>Selected for the Qualcomm Track</strong> at the <strong>UW-Madison MadData 26 Hackathon</strong> (1 of 10 teams selected from 350+ registrants). <br>
+                        Air-gapped AI security auditor running 100% on-device (Snapdragon X Elite NPU). Detects legal risks and code vulnerabilities using local Llama 3.2 & RAG without cloud data leaks.</p>
+                    <div class="tech-tags">
+                        <img src="https://img.shields.io/badge/Llama%203.2-040404?style=flat&logo=meta&logoColor=white" alt="Llama">
+                        <img src="https://img.shields.io/badge/Snapdragon%20NPU-FF0000?style=flat&logo=qualcomm&logoColor=white" alt="Qualcomm">
+                        <img src="https://img.shields.io/badge/Local%20RAG-005571?style=flat&logo=elasticsearch&logoColor=white" alt="RAG">
+                    </div>
+                </div>
                 
                 <div class="project-card">
                     <div class="card-head">
